Update CMakeLists.txt for improved library management

--- a/src/wifi/CMakeLists.txt
+++ b/src/wifi/CMakeLists.txt
@@ -99,6 +99,7 @@ set(source_files
     model/rate-control/rraa-wifi-manager.cc
     model/rate-control/rrpaa-wifi-manager.cc
     model/rate-control/thompson-sampling-wifi-manager.cc
+    model/rate-control/smart-wifi-manager.cc
     model/recipient-block-ack-agreement.cc
     model/reduced-neighbor-report.cc
     model/simple-frame-capture-model.cc
@@ -252,6 +253,7 @@ set(header_files
     model/rate-control/rraa-wifi-manager.h
     model/rate-control/rrpaa-wifi-manager.h
     model/rate-control/thompson-sampling-wifi-manager.h
+    model/rate-control/smart-wifi-manager.h
     model/recipient-block-ack-agreement.h
     model/reduced-neighbor-report.h
     model/reference/error-rate-tables.h
