--- a/src/wifi/CMakeLists.txt
+++ b/src/wifi/CMakeLists.txt
@@ -101,6 +101,7 @@ set(source_files
     model/rate-control/thompson-sampling-wifi-manager.cc
     model/rate-control/smart-wifi-manager-v1.cc
     model/rate-control/smart-wifi-manager-v2.cc
+    model/rate-control/smart-wifi-manager-v3.cc
     model/recipient-block-ack-agreement.cc
     model/reduced-neighbor-report.cc
     model/simple-frame-capture-model.cc
@@ -256,6 +257,7 @@ set(header_files
     model/rate-control/thompson-sampling-wifi-manager.h
     model/rate-control/smart-wifi-manager-v1.h
     model/rate-control/smart-wifi-manager-v2.h
+    model/rate-control/smart-wifi-manager-v3.h
     model/recipient-block-ack-agreement.h
     model/reduced-neighbor-report.h
     model/reference/error-rate-tables.h
