Refactor CMakeLists.txt for improved library management and organization

--- a/src/wifi/CMakeLists.txt
+++ b/src/wifi/CMakeLists.txt
@@ -102,6 +102,7 @@ set(source_files
     model/rate-control/smart-wifi-manager-v1.cc
     model/rate-control/smart-wifi-manager-v2.cc
     model/rate-control/smart-wifi-manager-v3.cc
+    model/rate-control/smart-wifi-manager-v3-logged.cc
     model/recipient-block-ack-agreement.cc
     model/reduced-neighbor-report.cc
     model/simple-frame-capture-model.cc
@@ -258,6 +259,7 @@ set(header_files
     model/rate-control/smart-wifi-manager-v1.h
     model/rate-control/smart-wifi-manager-v2.h
     model/rate-control/smart-wifi-manager-v3.h
+    model/rate-control/smart-wifi-manager-v3-logged.h
     model/recipient-block-ack-agreement.h
     model/reduced-neighbor-report.h
     model/reference/error-rate-tables.h
