Enhance SmartWifiManagerXgb with additional features and improvements
- Added new source files: performance-based-parameter-generator.cc and decision-count-controller.cc.
- Updated SmartWifiManagerXgb to include enhanced traffic statistics tracking.
- Implemented robust SNR variance calculation and improved feature extraction.
- Introduced methods for mapping ML model rate indices to WiFi rate indices.
- Enhanced inference control with packet-based and time-based checks.
- Improved logging for better debugging and monitoring of ML inference processes.
- Adjusted default values for inference parameters to optimize performance.

--- a/src/wifi/CMakeLists.txt
+++ b/src/wifi/CMakeLists.txt
@@ -12,6 +12,8 @@ set(source_files
     helper/wifi-mac-helper.cc
     helper/wifi-radio-energy-model-helper.cc
     helper/yans-wifi-helper.cc
+    helper/performance-based-parameter-generator.cc
+    helper/decision-count-controller.cc
     model/addba-extension.cc
     model/adhoc-wifi-mac.cc
     model/ampdu-subframe-header.cc
@@ -171,6 +173,8 @@ set(header_files
     helper/wifi-mac-helper.h
     helper/wifi-radio-energy-model-helper.h
     helper/yans-wifi-helper.h
+    helper/performance-based-parameter-generator.h
+    helper/decision-count-controller.h
     model/addba-extension.h
     model/adhoc-wifi-mac.h
     model/ampdu-subframe-header.h
