Add benchmark CSV files for smartv1, smartv2, and smartv3
- Created smartv1-benchmark.csv with various scenarios including distance, speed, interferers, packet size, traffic rate, throughput, packet loss, average delay, received packets, and transmitted packets.
- Created smartv2-benchmark.csv with similar structure and data points as smartv1, ensuring consistency across versions.
- Created smartv3-benchmark.csv, maintaining the same format and including comprehensive performance metrics for different scenarios.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ openpyxl
 sphinx
 
 # Python GUI/graphics (used in utils/grid.py)
-pycairo
-pygobject   # for GTK (gtk and cairo bindings)
+
+# pycairo
+# pygobject   # for GTK (gtk and cairo bindings)
