Add minstrel-wifi-manager-logged: include source and header files for enhanced logging

--- a/src/wifi/CMakeLists.txt
+++ b/src/wifi/CMakeLists.txt
@@ -107,6 +107,7 @@ set(source_files
     model/rate-control/smart-wifi-manager-v3-logged.cc
     model/rate-control/smart-wifi-manager-xgb.cc
     model/rate-control/smart-wifi-manager-rf.cc
+    model/rate-control/minstrel-wifi-manager-logged.cc
     model/recipient-block-ack-agreement.cc
     model/reduced-neighbor-report.cc
     model/simple-frame-capture-model.cc
@@ -269,6 +270,8 @@ set(header_files
     model/rate-control/smart-wifi-manager-ml-common.h
     model/rate-control/smart-wifi-manager-xgb.h
     model/rate-control/smart-wifi-manager-rf.h
+    model/rate-control/minstrel-wifi-manager-logged.h
+
     model/recipient-block-ack-agreement.h
     model/reduced-neighbor-report.h
     model/reference/error-rate-tables.h
